--- a/style.css
+++ b/style.css
@@ -1,9 +1,77 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700;800&display=swap');
 
 
+:root {
+    --font-color: #272343;
+    --color1: #BAE8E8;
+    --color2: #E3F6F5;
+    --bg-color: #FFFFFF;
+
+    --box-shadow:  0px 4px 5px 1px rgba(39, 35, 67, 0.33);
+}
+
+
 * {
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
 }
+
+
+/*navigation styles*/
+.nav-bar {
+    display: flex;
+    justify-content: space-between;
+    background-color: transparent;
+    padding: 1em 2.5em;
+    width: 100%;
+    height: 4rem;
+    line-height: 2rem;
+    vertical-align: center;
+    color: var(--font-color);
+}
+
+.nav-bar .logo {
+    display: flex;
+    font-size: 2em;
+    height: 4rem;
+
+}
+
+.nav-links li {
+    float: left;
+    list-style: none;
+    margin-left: 3em;
+    position: relative;
+}
+
+.nav-links li:not(:last-child)::before {
+    content: '';
+    position: absolute;
+    background-color: var(--font-color);
+    width: 100%;
+    height: 1.5px;
+    bottom: 0;
+    
+}
+
+.nav-links .cntct-btn {
+    background-color: var(--font-color);
+    color: var(--color2);
+    padding: .25em 1em;
+    border-radius: 1em; 
+    box-shadow: var(--box-shadow);
+}
+
+
+
+.nav-links li a {
+    color: var(--font-color);
+    text-decoration: none;
+    font-size: 1.2em;
+    padding-left: .8em;
+    padding-right: .8em;
+}
+
+
