--- a/style.css
+++ b/style.css
@@ -33,6 +33,8 @@
     position: absolute;
     background-color: var(--bg-color);
     top: 0;
+    z-index: 100;
+    position: fixed;
 }
 
 .nav-bar .logo {
@@ -49,6 +51,10 @@
     position: relative;
 }
 
+.nav-links li:not(:last-child) {
+    overflow: hidden;
+}
+
 .nav-links li:not(:last-child)::before {
     content: '';
     position: absolute;
@@ -56,15 +62,76 @@
     width: 100%;
     height: 1.5px;
     bottom: 0;
+    left: 0;
+    transform-origin: right;
+    transform: scaleX(0);
+
+    transition: transform .3s ease-in-out;
     
 }
+
+.nav-links li:not(:last-child):hover::before {
+    transform-origin: left;
+    transform: scaleX(1);
+}
+
+.nav-links li:not(:last-child):active {
+    transform: scale(.9);
+    transition: .2s ease-in-out;
+}
+
 
 .nav-links .cntct-btn {
     background-color: var(--font-color);
     color: var(--color2);
-    padding: .25em 1em;
+    width: 150px;
+    height: 35px;
     border-radius: 1em; 
     box-shadow: var(--box-shadow);
+    position: relative;
+
+}
+.nav-links .cntct-btn::before {
+    content: '';
+    display: block;
+    position: absolute;
+    background-color: var(--color2);
+    width: 100%;
+    border-radius: 1em;
+    height: 35px;
+    top: 0;
+    left: 0;
+    transform: scaleX(0);
+    transform-origin: right;
+    transition: transform .5s;
+
+}
+
+.nav-links .cntct-btn:hover::before{
+    transform-origin: left;
+    transform: scaleX(1);
+
+}
+
+.nav-links .cntct-btn:active::before {
+    background-color: #BAE8E8;
+    transition: .3s ease;
+}
+
+.cntct-btn span {
+    position: absolute;
+    width: 150px;
+    height: 35px;
+    color: var(--color2);
+    text-align: center;
+    left: 0;
+    z-index: 1;
+
+    transition: all .5s;
+}
+
+.cntct-btn span:hover {
+    color: var(--font-color);
 }
 
 
@@ -78,13 +145,18 @@
 }
 
 
+
+
 /*homepage styles*/
 .homepage {
-    width: 90%;
+    width: 95%;
     margin: 0 auto;
     display: flex;
+    justify-content: space-between;
     color: var(--font-color);
     background-color: var(--bg-color);
+    padding-left: 2em;
+    overflow: hidden;
 }
 
 .homepage .text-content {
@@ -138,4 +210,43 @@
 
 }
 
-/**/
+/*img content styles*/
+
+.img-content {
+    position: relative;
+    width: 55%;
+    height: 95vh;
+    display: flex;
+}
+
+.img-content .blob {
+    position: absolute;
+    width: 100%;
+    z-index: 0;
+    top: 3em;
+    transform: rotate(-100deg);
+}
+
+.img-content .saly {
+    position: absolute;
+    z-index: 1;
+    width: 90%;
+    left: 5em;
+    top: 50px;
+}
+
+.img-content .object1 {
+    position: absolute;
+    z-index: 1;
+    width: 35%;
+    top: 10em;
+    left: 5em;
+}
+
+.img-content .object2 {
+    position: absolute;
+    z-index: 1;
+    width: 45%;
+    bottom: 0;
+    right: 5em;
+}
