--- a/style.css
+++ b/style.css
@@ -249,30 +249,76 @@
     position: absolute;
     width: 100%;
     z-index: 0;
-    top: 3em;
+    top: 40px;
     transform: rotate(-100deg);
 }
 
 .img-content .saly {
     position: absolute;
     z-index: 1;
-    width: 90%;
-    left: 5em;
+    width: 80%;
+    left: 100px;
     top: 50px;
+    
+    animation: float-saly 7s infinite;
 }
 
 .img-content .object1 {
     position: absolute;
     z-index: 1;
     width: 35%;
-    top: 10em;
-    left: 5em;
+    top: 160px;
+    left: 60px;
+
+    animation: float-blob1 7s infinite;
+
 }
 
 .img-content .object2 {
     position: absolute;
     z-index: 1;
-    width: 45%;
-    bottom: 0;
-    right: 5em;
+    width: 50%;
+    top: 380px;
+    left: 300px;
+
+    animation: float-blob2 7s infinite ;
+
+}
+
+@keyframes float-saly {
+    0% {
+        transform: translateY(3%);
+    }
+
+    50% {
+        transform: translateY(-3%);
+    }
+
+    100% {
+        transform: translateY(3%);
+    }
+}
+
+@keyframes float-blob1 {
+    0% {
+        transform: translateY(-5%);
+    }
+    50% {
+        transform: translateY(5%);
+    }
+    100% {
+        transform: translateY(-5%);
+    }
+}
+
+@keyframes float-blob2 {
+    0% {
+        transform: translateY(5%);
+    }
+    50% {
+        transform: translateY(-5%);
+    }
+    100% {
+        transform: translateY(5%);
+    }
 }
