--- a/style.css
+++ b/style.css
@@ -543,20 +543,20 @@
     }
 }
 
-@media (max-width: 480px) {
+@media (max-width: 660px) {
     .icon {
         display: block;
-        font-size: 1.5em;
+        font-size: 1.8em;
+        opacity: 0;
     }
 
     .nav-links {
         position: fixed;
         width: 100%;
-        max-width: 300px;
+        height: 100%;
         background-color: var(--color1);
-        top: 70px;
+        top: 50px;
         right: 0;
-        display: block;
         box-sizing: border-box;
         padding: 20px 80px;
         display: none;
@@ -565,9 +565,154 @@
 
     .nav-links li {
         margin: 10px 0;
+        font-size: 1.5em;
+        width: fit-content;
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .nav-links.active {
-        display: block;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        
+    }
+
+    .nav-links .cntct-btn::before {
+        display: none;
+    }
+
+    .nav-links .cntct-btn {
+        background-color: transparent;
+    }
+
+    .nav-links .nav-button::before {
+        content: '';
+        position: absolute;
+        background-color: var(--font-color);
+        width: 100%;
+        height: 1.5px;
+        bottom: 0;
+        left: 0;
+        transform-origin: right;
+        transform: scaleX(0);
+
+        transition: transform .3s ease-in-out;
+    }
+
+    .nav-links .nav-button:hover::before {
+        transform-origin: left;
+        transform: scaleX(1);
+    }
+
+    .nav-links .nav-button:active {
+        transform: scale(.9);
+        transition: .2s ease-in-out;
+    }
+
+    /*homepage styles*/
+    .homepage {
+        flex-direction: column-reverse;
+        width: 100%;
+        height: fit-content;
+        justify-content: center;
+        align-items: center;
+        overflow: hidden;
+        padding: 0;
+    }
+
+    .homepage .img-content {
+        width: 100%;
+        height: fit-content;
+        top: 100px;
+        margin: 0;
+        padding: 0;
+        justify-content: center;
+        
+    }
+
+    .img-content .saly {
+        top: -10px;
+        width: 70%;
+        left: 100px;
+    }
+
+    .img-content .blob {
+        position: relative;
+        width: 90%;
+        top: -50px;
+    }
+
+    .img-content .object1{
+        top: 0px;
+        left: 100px;
+        width: 30%;
+    }
+
+    .img-content .object2 {
+        top: 200px;
+        width: 40%;
+        left: 250px;
+        position: absolute;
+    }
+    
+    .homepage .text-content {
+        width: 100%;
+        height: fit-content;
+        padding: 0;
+        text-align: center;    
+        line-height: 3em;
+
+    }
+
+    .text-content .hello {
+        font-size: 1em;
+    }
+
+    .text-content .name {
+        font-size: 4em;
+    }
+
+    .text-content .front-end {
+        font-size: 2.3em;
+    }
+
+    .text-content .introduction {
+        font-size: 1em;
+        padding: 0 50px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+
+    .text-content button {
+        transform: scale(1);
+        justify-content: center;
+        text-align: center;
+    }
+
+    .text-content .about-btn {
+        margin-right: 20px;
+    }
+
+    .text-content .services-btn {
+        margin: 0;
+    }
+}
+
+@media (max-width: 460px) {
+    .img-content .object2 {
+        top: 150px;
+        left: 200px;
+    }
+}
+
+@media (max-width: 426px) {
+    .text-content .name {
+        font-size: 3.5em;
+    }
+
+    .text-content .front-end {
+        font-size: 2.2em;
     }
 }
