--- a/style.css
+++ b/style.css
@@ -1056,3 +1056,71 @@
         
     }
 }
+
+/*skills layout*/
+
+.skills-page {
+    width: 100%;
+    background-image: linear-gradient(to right, var(--color1), var(--color2));
+    height: 100%;
+    overflow: hidden;
+}
+
+.skills-page .grid {
+    
+    color: var(--font-color);
+    padding: 40px 20px 80px;
+    display: grid;
+    overflow: hidden;
+
+    grid-template-columns: repeat(auto-fill, minmax(21em, 1fr));
+    grid-auto-rows: auto;
+
+    grid-gap: 2em;
+}
+
+.skills-page .my-skills {
+    text-align: center;
+    font-size: 5em;
+    grid-column: 1/-1;
+}
+
+.grid div {
+    color: var(--color2);
+    background-color: var(--font-color);
+    display: block;
+    text-align: center;
+    border-radius: 30px;
+    padding: 3em 1.5em 1em;
+    height: 25rem;
+    cursor: pointer;
+    transition: all .5s ease;
+
+}
+
+.grid div:hover {
+    background-color: var(--color2);
+    color: var(--font-color);
+    border: 4px solid var(--font-color);
+    transform: translateY(-1.5rem);
+}
+
+.skills-page div i {
+    font-size: 4em;
+}
+
+.skills-page div h3 {
+    font-size: 2em;
+    line-height: 1em;
+    margin-bottom: 1em;
+}
+
+.skills-page div p {
+    font-size: 1.2em;
+}
+
+@media (min-width:1112px) and (max-width: 1465px) {
+    .skills-page .grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
