--- a/style.css
+++ b/style.css
@@ -1133,6 +1133,7 @@ footer {
     padding: 3em 3em;
     display: flex;
     justify-content: space-between;
+    overflow: hidden;
 }
 
 footer .icon-links {
@@ -1263,5 +1264,62 @@ footer .form-div {
 
     .icon-links button {
         margin-top: 1em;
+    }
+}
+
+@media (max-width: 415px) {
+    footer {
+    padding: 3em 1em;
+
+    }
+    .icon-links h1 {
+        font-size: 2.5em;
+    }
+
+    .icon-links p {
+        font-size: .9em;
+    }
+
+    .icon-links button {
+        font-size: 1.5em;
+        width: 50px;
+        height: 50px;
+        margin-right: .8em;
+    }
+
+    .form-div .input-box input {
+        font-size: .9em;
+        width: 85%;
+        margin: 0;
+    }
+
+    .form-div .input-box {
+        display: flex;
+    }
+
+
+    .form-div .input-box label {
+        font-size: .9em;
+        padding: 5px 10px;
+
+    }
+
+    .form-div .input-box input:focus ~ label,
+    .form-div .input-box input:valid ~ label{
+    top: -30px;
+    font-size: .8em;
+    opacity: 1;
+
+}
+}
+
+
+@media (max-width: 345px) {
+    .form-div .input-box input {
+        width: 70%;
+    }
+
+    .icon-links button  {
+        margin-right: .5em;
     }
 }
